src/components/blocks/search-result/_search-result.scss
.b-search-result {
  background-color: siteColor(vam-white);
  border-bottom: 1px solid siteColor(vam-grey-5);
  display: block;
  height: 194px;
  width: 100%;

  @include bpMinXSmall {
    height: 140px;
  }

  &__content {
    padding: 16px 0;
    &--text {
      margin: auto;
    }

    &--type {
      @include typeSetting(0, semi-bold, uppercase);
      color: siteColor(vam-grey-2);
      margin-bottom: 4px;


      @include bpMinXSmall {
        @include typeSetting(1, semi-bold, uppercase);
        height: 28px;
        line-height: 2rem;
        margin-bottom: 0;
      }
    }

    &--title {
      @include typeSetting(4, normal);
      color: siteColor(vam-black);
      height: 44px;
      line-height: 1.33rem;
      margin-bottom: 10px;
      overflow: hidden;
      text-overflow: clip;
      white-space: normal;
      
      @include bpMinXSmall {
        @include typeSetting(5, normal);
        height: 32px;
        margin-bottom: 4px;
        text-overflow: ellipsis;
        white-space: nowrap;
      }
    }

    &--description {
      @include typeSetting(1, normal);
      color: siteColor(vam-grey-2);
      height: 72px;
      line-height: 18px;
      overflow: hidden;
      position: relative;
      width: 75%;
      
      @include bpMinXSmall {
        height: 34px;
      }

      & em {
        font-style: normal;
        font-weight: 700;
      }
    }

    &--image {
      float: right;
      height: 72px;
      position: relative;
      top: 76px;
      width: 72px;

      @include bpMinXSmall {
        float: left;
        height: 100px;
        margin: 20px 0;
        margin-right: 20px;
        top: -16px;
        width: 100px;
      }
    }
  }
}

